Map. Panning, identities

--- a/src/main/client/src/assets/i18n/cs.json
+++ b/src/main/client/src/assets/i18n/cs.json
@@ -1,5 +1,7 @@
 {
   "tenant": "Katalog",
   "tenants": "Katalogy",
-  "clearSelection": "Zzrušit výběr"
+  "clearSelection": "Zzrušit výběr",
+  "Recipients": "Adresat",
+  "Mentioned": "Zminene odsoby"
 }
