--- a/src/main/client/src/assets/i18n/en.json
+++ b/src/main/client/src/assets/i18n/en.json
@@ -1,5 +1,7 @@
 {
   "tenant": "Catalog",
   "tenants": "Catalogs",
-  "clearSelection": "Clear selection"
+  "clearSelection": "Clear selection",
+  "Recipients": "Recipients",
+  "Mentioned": "Mentioned"
 }
