--- a/src/main/client/src/assets/i18n/en.json
+++ b/src/main/client/src/assets/i18n/en.json
@@ -3,5 +3,6 @@
   "tenants": "Catalogs",
   "clearSelection": "Clear selection",
   "Recipients": "Recipients",
-  "Mentioned": "Mentioned"
+  "Mentioned": "Mentioned",
+  "invalidTenant": "There is no available data for this Catalog"
 }
