--- a/src/main/client/src/assets/i18n/en.json
+++ b/src/main/client/src/assets/i18n/en.json
@@ -4,9 +4,11 @@
   "view": "View",
   "views": "Views",
   "clearSelection": "Clear selection",
-  "Authors": "Authors",
-  "Recipients": "Recipients",
-  "Mentioned": "Mentioned",
-  "Keywords": "Keywords",
+  "field": {
+    "authors": "Authors",
+    "recipients": "Recipients",
+    "mentioned": "Mentioned",
+    "keywords": "Keywords"
+  },
   "invalidTenant": "There is no available data for this Catalog"
 }
