--- a/src/main/client/src/assets/i18n/en.json
+++ b/src/main/client/src/assets/i18n/en.json
@@ -8,7 +8,8 @@
     "authors": "Authors",
     "recipients": "Recipients",
     "mentioned": "Mentioned",
-    "keywords": "Keywords"
+    "keywords": "Keywords",
+    "relation_tenants": "Catalogs for comparition"
   },
   "invalidTenant": "There is no available data for this Catalog"
 }
