--- a/src/main/client/src/assets/i18n/cs.json
+++ b/src/main/client/src/assets/i18n/cs.json
@@ -8,7 +8,8 @@
     "authors": "Autor",
     "recipients": "Adresát",
     "mentioned": "Zmíněné osoby",
-    "keywords": "Klíčová slova"
+    "keywords": "Klíčová slova",
+    "relation_tenants": "Katalogy pro porovnani"
   },
   "invalidTenant": "Nejsou k dispozice data pro tento Katalog"
 }
