--- a/src/main/client/src/assets/i18n/cs.json
+++ b/src/main/client/src/assets/i18n/cs.json
@@ -7,7 +7,7 @@
   "usedFilters": "Vybrané filtry",
   "field": {
     "author": "Autor",
-    "authors": "Autors",
+    "authors": "Autori",
     "recipient": "Adresát",
     "recipients": "Adresáti",
     "mentioned": "Zmíněné osoby",
