--- a/src/main/client/src/assets/i18n/cs.json
+++ b/src/main/client/src/assets/i18n/cs.json
@@ -7,8 +7,10 @@
   "usedFilters": "Vybrané filtry",
   "field": {
     "author": "Autor",
+    "identity_author": "Autor",
     "authors": "Autori",
     "recipient": "Adresát",
+    "identity_recipient": "Adresát",
     "recipients": "Adresáti",
     "mentioned": "Zmíněné osoby",
     "origin": "Místo odeslání",
@@ -18,7 +20,8 @@
     "professions": "Profese",
     "keywords": "Klíčová slova",
     "relation_tenants": "Katalogy pro porovnani",
-    "date": "Datum"
+    "date": "Datum",
+    "date_year": "Rok"
   },
   "action": {
     "view_in_hiko": "Zobrazit v HIKO"
